--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,7 @@ matplotlib = "3.5"
 scikit-learn = "1.3"
 coverage-conditional-plugin = "^0.7.0"
 xgboost = "^2.0.3"
-pillow = "^10.2.0"
+pillow = "^10.3.0"
 
 [tool.poetry.dev-dependencies]
 nox-poetry = "*"
@@ -46,7 +46,7 @@ flake8-bugbear = "*"
 flake8-broken-line = "*"
 flake8-comprehensions = "*"
 # Formatting
-black = {version = "^23.1a1", allow-prereleases = true}
+black = {version = "^24.3.0", allow-prereleases = true}
 
 [tool.poetry.scripts]
 ageml = "ageml.__main__:main"
